Slight fix
Used flex and justify content to fix problems with misalignment of text on title.html

--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,8 @@ body {
     margin-top: 10vh;
 }
 
+.placement {
+    display: flex;
+    justify-content: center;
+}
+
